# swagger.json
@@ -598,13 +598,34 @@
             }
           },
           "403": {
-            "description": "Cannot update monster #ID: it has at least one SRD translation"
+            "description": "Cannot update monster #ID: it has at least one SRD translation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetailsDto"
+                }
+              }
+            }
           },
           "404": {
-            "description": "Spell #ID not found"
+            "description": "Spell #ID not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetailsDto"
+                }
+              }
+            }
           },
           "410": {
-            "description": "Spell #ID has been deleted"
+            "description": "Spell #ID has been deleted",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetailsDto"
+                }
+              }
+            }
           }
         },
         "summary": "Update a monster by ID",
@@ -650,12 +671,12 @@
           "createdAt": {
             "format": "date-time",
             "type": "string",
-            "example": "2025-11-18T13:50:15.188Z"
+            "example": "2025-11-18T14:05:43.062Z"
           },
           "updatedAt": {
             "format": "date-time",
             "type": "string",
-            "example": "2025-11-18T13:50:15.188Z"
+            "example": "2025-11-18T14:05:43.062Z"
           },
           "name": {
             "type": "string",
@@ -1465,12 +1486,12 @@
           "createdAt": {
             "format": "date-time",
             "type": "string",
-            "example": "2025-11-18T13:50:15.745Z"
+            "example": "2025-11-18T14:05:43.630Z"
           },
           "updatedAt": {
             "format": "date-time",
             "type": "string",
-            "example": "2025-11-18T13:50:15.745Z"
+            "example": "2025-11-18T14:05:43.630Z"
           },
           "name": {
             "type": "string",
